[Implement Features] 큐레이터 상세보기 통신 완료

--- a/app/src/main/res/layout/activity_curator_info.xml
+++ b/app/src/main/res/layout/activity_curator_info.xml
@@ -4,19 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginHorizontal="16dp"
-    android:paddingBottom="56dp"
     tools:context=".fragment.LibraryFragment">
+
+    <ImageView
+        android:id="@+id/img_back_curator_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:paddingStart="17dp"
+        android:paddingTop="16dp"
+        android:paddingEnd="23dp"
+        android:paddingBottom="16dp"
+        android:src="@drawable/btn_back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.example.mongleandroid_release.util.NewScrollView
         android:id="@+id/main_scroll_view_cura_info"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:fillViewport="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/img_back_curator_info"
         app:layout_constraintVertical_bias="0"
         app:stickyHeader="@+id/cl_titleLayout">
 
@@ -28,50 +39,43 @@
             app:layout_constraintBottom_toBottomOf="@id/main_scroll_view"
             app:layout_constraintLeft_toLeftOf="@id/main_scroll_view"
             app:layout_constraintRight_toRightOf="@id/main_scroll_view"
-            app:layout_constraintTop_toTopOf="@id/main_scroll_view"
-            >
+            app:layout_constraintTop_toTopOf="@id/main_scroll_view">
+
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/const1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0">
+                app:layout_constraintVertical_bias="0.0">
 
                 <ImageView
-                    android:id="@+id/img_back_curator_info"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/btn_back"
-                    android:layout_marginTop="20.5dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"/>
-
-
-                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/img_curator_profile"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    android:layout_marginTop="76dp"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
+                    android:layout_marginTop="24dp"
                     android:background="@color/soft_green"
+                    android:scaleType="centerCrop"
                     app:layout_constraintBottom_toTopOf="@id/tv_curator_username"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/tv_curator_username"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="9dp"
+                    android:fontFamily="@font/notosanscjkkr_regular"
                     android:gravity="center_horizontal"
+                    android:includeFontPadding="false"
                     android:letterSpacing="-0.02"
-                    android:lineSpacingExtra="-2sp"
                     android:text="몽그리"
-                    android:textColor="#565656"
+                    android:textColor="@color/greyish_brown"
                     android:textSize="17sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -82,15 +86,17 @@
                     android:id="@+id/tx_curators_keyword"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="11dp"
+                    android:fontFamily="@font/notosanscjkkr_regular"
                     android:gravity="center_horizontal"
+                    android:includeFontPadding="false"
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="1sp"
                     android:text="감성자극"
                     android:textColor="#a7a7a7"
                     android:textSize="14sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/tv_curator_username"
+                    app:layout_constraintStart_toStartOf="@+id/tv_curator_username"
                     app:layout_constraintTop_toBottomOf="@id/tv_curator_username" />
 
 
@@ -98,43 +104,42 @@
                     android:id="@+id/tx_curators_contents"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="1dp"
+                    android:layout_marginTop="4dp"
+                    android:fontFamily="@font/notosanscjkkr_demilight"
                     android:gravity="center_horizontal"
+                    android:includeFontPadding="false"
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="5sp"
                     android:text="저는 몽글의 몽글몽글한 마스코트인  몽글이에요:):)"
                     android:textColor="#bcbcbc"
                     android:textSize="13sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/tx_curators_keyword"
+                    app:layout_constraintStart_toStartOf="@+id/tx_curators_keyword"
                     app:layout_constraintTop_toBottomOf="@id/tx_curators_keyword" />
 
                 <CheckBox
                     android:id="@+id/cb_curator_subs_info"
                     android:layout_width="66dp"
                     android:layout_height="30dp"
+                    android:layout_marginTop="6dp"
+                    android:layout_marginBottom="10dp"
                     android:background="@drawable/btn_subscribe"
                     android:button="@null"
                     android:gravity="center"
                     android:text="구독"
                     android:textColor="#ffffff"
-                    android:layout_marginTop="13dp"
-                    android:layout_marginBottom="8dp"
-                    app:layout_constraintTop_toBottomOf="@id/tx_curators_contents"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    />
-
+                    app:layout_constraintTop_toBottomOf="@id/tx_curators_contents" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/cl_titleLayout"
                 android:layout_width="match_parent"
-                android:layout_height="67dp"
+                android:layout_height="wrap_content"
                 android:background="#ffffff"
                 app:layout_constraintBottom_toTopOf="@id/vp_curator_info"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -146,7 +151,10 @@
                     android:id="@+id/tv_thema_num_cu_info"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:fontFamily="@font/notosanscjkkr_demilight"
                     android:gravity="center_horizontal"
+                    android:includeFontPadding="false"
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="14sp"
                     android:text="47"
@@ -156,13 +164,16 @@
                     app:layout_constraintLeft_toLeftOf="@id/cl_titleLayout"
                     app:layout_constraintRight_toLeftOf="@id/tv_sentence_num_cu_info"
                     app:layout_constraintTop_toTopOf="@id/cl_titleLayout"
-                    app:layout_constraintVertical_bias="1"/>
+                    app:layout_constraintVertical_bias="1" />
 
                 <TextView
                     android:id="@+id/tv_thema_cu_info"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="11dp"
+                    android:fontFamily="@font/notosanscjkkr_demilight"
                     android:gravity="center_horizontal"
+                    android:includeFontPadding="false"
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="6sp"
                     android:text="테마"
@@ -175,6 +186,7 @@
 
 
                 <View
+                    android:id="@+id/view12"
                     android:layout_width="1dp"
                     android:layout_height="35dp"
                     android:background="#e7e7e7"
@@ -187,29 +199,33 @@
                     android:id="@+id/tv_sentence_num_cu_info"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/notosanscjkkr_demilight"
                     android:gravity="center_horizontal"
+                    android:includeFontPadding="false"
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="14sp"
                     android:text="29"
                     android:textColor="@color/very_light_pink_two"
                     android:textSize="29sp"
-                    app:layout_constraintBottom_toTopOf="@id/tv_sentence_cu_info"
+                    app:layout_constraintBottom_toBottomOf="@+id/tv_thema_num_cu_info"
                     app:layout_constraintLeft_toRightOf="@id/tv_thema_num_cu_info"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="@id/cl_titleLayout"
-                    app:layout_constraintVertical_bias="1"/>
+                    app:layout_constraintTop_toTopOf="@+id/tv_thema_num_cu_info"
+                    app:layout_constraintVertical_bias="1" />
 
                 <TextView
                     android:id="@+id/tv_sentence_cu_info"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/notosanscjkkr_demilight"
                     android:gravity="center_horizontal"
+                    android:includeFontPadding="false"
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="6sp"
                     android:text="문장"
                     android:textColor="@color/very_light_pink_two"
                     android:textSize="14sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintBottom_toBottomOf="@+id/tv_thema_cu_info"
                     app:layout_constraintLeft_toLeftOf="@id/tv_sentence_num_cu_info"
                     app:layout_constraintRight_toRightOf="@id/tv_sentence_num_cu_info"
                     app:layout_constraintTop_toBottomOf="@id/tv_sentence_num_cu_info" />
@@ -219,13 +235,20 @@
             <com.example.mongleandroid_release.util.NonSwipeableViewPager
                 android:id="@+id/vp_curator_info"
                 android:layout_width="match_parent"
-                android:layout_height="1000dp"
-                android:layout_marginTop="10dp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_height="700dp"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/cl_titleLayout" />
+
+            <View
+                android:id="@+id/view13"
+                android:layout_width="0dp"
+                android:layout_height="10dp"
+                android:background="@drawable/topbar_gradient"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/cl_titleLayout" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
