--- a/app/src/main/res/layout/fragment_curator_info_sentence.xml
+++ b/app/src/main/res/layout/fragment_curator_info_sentence.xml
@@ -10,13 +10,12 @@
         android:id="@+id/rv_sentence_cu_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/item_cu_info_sentence"
-        />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/item_search_sentence" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
