[Refactor Codes] 큐레이터 상세보기 뷰에서 테마와 문장의 갯수 출력 완료 + 큐레이터 상세보기 테마, 문장 통신 완료

--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -122,7 +122,6 @@
 
 
             <com.google.android.material.tabs.TabLayout
-                app:tabIndicator="@null"
                 android:id="@+id/titleLayout"
                 android:layout_width="match_parent"
                 android:layout_height="67dp"
@@ -131,6 +130,8 @@
                 app:tabMode="fixed"
                 app:tabGravity="fill"
                 app:tabIndicatorColor="#00ffffff"
+                android:outlineAmbientShadowColor="#00ffffff"
+                app:tabRippleColor="#00ffffff"
                 app:layout_constraintBottom_toTopOf="@id/vp_library"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
