--- a/app/src/main/res/layout/item_library_sentence_click.xml
+++ b/app/src/main/res/layout/item_library_sentence_click.xml
@@ -8,7 +8,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_library_item_sentence"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginVertical="10dp"
         app:layout_constraintEnd_toEndOf="parent"
