[Implement Features] - 문장 좋아요 변경

--- a/app/src/main/res/drawable/et_area_sentence_bottom.xml
+++ b/app/src/main/res/drawable/et_area_sentence_bottom.xml
@@ -3,6 +3,8 @@
 <!-- Drop Shadow Stack -->
 <!-- Background -->
 <item> <shape android:shape="rectangle">
+    <size android:width="166dp"
+        android:height="57dp"/>
     <solid
         android:color="#ffffff" />
     <stroke
