--- a/app/src/main/res/layout/activity_sentence_detail_view.xml
+++ b/app/src/main/res/layout/activity_sentence_detail_view.xml
@@ -379,51 +379,46 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <CheckBox
             android:id="@+id/constraint_likes_num"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginBottom="34dp"
-            android:clickable="true"
+            android:button="@null"
             android:background="@drawable/et_area_sentence_bottom"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/constraintLayout6"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintEnd_toStartOf="@+id/container_bookmark_num"
+            app:layout_constraintStart_toStartOf="parent" />
 
-            <ImageView
-                android:id="@+id/img_sentence_detail_likes"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="57dp"
-                android:layout_marginTop="21dp"
-                android:layout_marginBottom="21dp"
-                android:src="@drawable/sentence_theme_o_ic_like"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/tv_sentence_likes_num"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="9dp"
+            android:layout_marginTop="19dp"
+            android:fontFamily="@font/notosanscjkkr_demilight"
+            android:includeFontPadding="false"
+            android:lineSpacingExtra="8sp"
+            android:text="502"
+            android:textColor="@color/very_light_pink_two"
+            android:textSize="16sp"
+            app:layout_constraintStart_toEndOf="@+id/img_sentence_detail_likes_num"
+            app:layout_constraintTop_toTopOf="@+id/constraint_likes_num" />
 
-            <TextView
-                android:id="@+id/tv_sentence_likes_num"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="9dp"
-                android:layout_marginEnd="57dp"
-                android:fontFamily="@font/notosanscjkkr_demilight"
-                android:includeFontPadding="false"
-                android:lineSpacingExtra="8sp"
-                android:text="502"
-                android:textColor="@color/very_light_pink_two"
-                android:textSize="16sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/img_sentence_detail_likes"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <ImageView
+            android:id="@+id/img_sentence_detail_likes_num"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="57dp"
+            android:layout_marginTop="23dp"
+            android:src="@drawable/sentence_theme_o_ic_like"
+            app:layout_constraintStart_toStartOf="@+id/constraint_likes_num"
+            app:layout_constraintTop_toTopOf="@+id/constraint_likes_num" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintLayout6"
+            android:id="@+id/container_bookmark_num"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
