--- a/app/src/main/res/layout/item_library_sentence_click.xml
+++ b/app/src/main/res/layout/item_library_sentence_click.xml
@@ -45,6 +45,7 @@
             android:textSize="16sp"
             android:fontFamily="@font/notosanscjkkr_regular"
             android:includeFontPadding="false"
+            android:layout_marginRight="6dp"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintEnd_toStartOf="@id/library_sentence_more"
             app:layout_constraintBottom_toTopOf="@id/img_item_library_sentence_usermark"
@@ -57,7 +58,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/more_1"
-            android:layout_marginRight="26dp"
+            android:paddingHorizontal="18dp"
+            android:layout_marginRight="5dp"
+            android:paddingVertical="16dp"
             app:layout_constraintTop_toTopOf="@id/tv_library_sentence_sentence"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/tv_library_sentence_sentence"
@@ -74,6 +77,7 @@
             app:layout_constraintLeft_toLeftOf="@id/tv_library_sentence_themename"
             app:layout_constraintRight_toLeftOf="@id/tv_item_library_sentence_username"
             app:layout_constraintTop_toBottomOf="@id/tv_library_sentence_sentence" />
+
 
         <TextView
             android:id="@+id/tv_item_library_sentence_username"
