--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -51,8 +51,11 @@
         app:layout_constraintTop_toBottomOf="@+id/topbar">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/activity_profile_cl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:orientation="vertical">
 
             <ImageView
