--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -80,25 +80,28 @@
                 android:id="@+id/vp_main"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginTop="14dp"
                 app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">
+                app:layout_constraintTop_toTopOf="parent">
 
             </androidx.viewpager.widget.ViewPager>
 
-            <com.google.android.material.tabs.TabLayout
-                android:id="@+id/tl_main"
+            <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
+                android:id="@+id/main_dots_indicator"
                 android:layout_width="wrap_content"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="21dp"
+                app:dotsColor="@color/very_light_pink_six"
+                app:dotsCornerRadius="7dp"
+                app:dotsSize="8dp"
+                app:dotsSpacing="4dp"
+                app:dotsWidthFactor="2.5"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/vp_main"
-                app:tabBackground="@drawable/dot_selector"
-                app:tabIndicatorHeight="0dp">
-
-            </com.google.android.material.tabs.TabLayout>
+                app:progressMode="false"
+                app:selectedDotColor="@color/soft_green" />
 
             <TextView
                 android:id="@+id/main_fragment_tv_today_sentence"
@@ -114,7 +117,7 @@
                 android:textColor="@color/black_two"
                 android:textSize="19sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tl_main" />
+                app:layout_constraintTop_toBottomOf="@+id/main_dots_indicator" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/main_fragment_rv_today_sentence"
