--- a/app/src/main/res/layout/custom_library_tab.xml
+++ b/app/src/main/res/layout/custom_library_tab.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -9,57 +10,76 @@
         android:id="@+id/library_thema_num"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="36dp"
+        android:fontFamily="@font/notosanscjkkr_demilight"
+        android:includeFontPadding="false"
+        android:letterSpacing="-0.02"
         android:text="47"
         android:textColor="@color/selector_library_tab_click"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/line1"
+        android:textSize="29sp"
+        app:layout_constraintBottom_toTopOf="@+id/library_thema"
+        app:layout_constraintEnd_toStartOf="@+id/line1"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <TextView
         android:id="@+id/library_thema"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:includeFontPadding="false"
         android:text="테마"
         android:textColor="@color/selector_library_tab_click"
-        android:textSize="10dp"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/library_thema_num"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@id/library_thema_num"
-        app:layout_constraintTop_toBottomOf="@id/library_thema_num"
+        app:layout_constraintTop_toBottomOf="@+id/library_thema_num"
         app:layout_constraintVertical_bias="0" />
 
     <View
         android:id="@+id/line1"
         android:layout_width="1dp"
         android:layout_height="35dp"
+        android:layout_marginTop="22dp"
+        android:layout_marginBottom="10dp"
         android:background="#e7e7e7"
-        app:layout_constraintBottom_toBottomOf="@id/library_thema"
-        app:layout_constraintEnd_toStartOf="@id/library_sentence_num"
-        app:layout_constraintStart_toEndOf="@id/library_thema_num"
-        app:layout_constraintTop_toTopOf="@id/library_thema_num" />
+        app:layout_constraintBottom_toBottomOf="@+id/library_thema"
+        app:layout_constraintTop_toTopOf="@+id/library_thema_num"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="130dp" />
 
     <TextView
         android:id="@+id/library_sentence_num"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:fontFamily="@font/notosanscjkkr_demilight"
+        android:includeFontPadding="false"
         android:text="36"
         android:textColor="@color/selector_library_tab_click"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toBottomOf="@id/library_thema_num"
-        app:layout_constraintEnd_toStartOf="@id/line2"
-        app:layout_constraintStart_toEndOf="@id/line1"
-        app:layout_constraintTop_toTopOf="@id/library_thema_num" />
+        android:textSize="29sp"
+        app:layout_constraintEnd_toStartOf="@+id/line2"
+        app:layout_constraintStart_toEndOf="@+id/line1"
+        app:layout_constraintTop_toTopOf="@+id/library_thema_num" />
 
     <TextView
         android:id="@+id/library_sentence"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:includeFontPadding="false"
         android:text="문장"
         android:textColor="@color/selector_library_tab_click"
-        android:textSize="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@+id/library_thema"
         app:layout_constraintEnd_toEndOf="@id/library_sentence_num"
         app:layout_constraintStart_toStartOf="@id/library_sentence_num"
         app:layout_constraintTop_toBottomOf="@id/library_sentence_num"
@@ -69,32 +89,37 @@
         android:id="@+id/line2"
         android:layout_width="1dp"
         android:layout_height="35dp"
+        android:layout_marginStart="134dp"
         android:background="#e7e7e7"
-        app:layout_constraintBottom_toBottomOf="@id/line1"
-        app:layout_constraintEnd_toStartOf="@id/library_curator_num"
-        app:layout_constraintStart_toEndOf="@id/library_sentence_num"
-        app:layout_constraintTop_toTopOf="@id/line1" />
+        app:layout_constraintBottom_toBottomOf="@+id/line1"
+        app:layout_constraintStart_toEndOf="@+id/line1"
+        app:layout_constraintTop_toTopOf="@+id/line1" />
 
     <TextView
         android:id="@+id/library_curator_num"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="54dp"
+        android:fontFamily="@font/notosanscjkkr_demilight"
+        android:includeFontPadding="false"
         android:text="23"
         android:textColor="@color/selector_library_tab_click"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toBottomOf="@id/library_sentence_num"
+        android:textSize="29sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/line2"
-        app:layout_constraintTop_toTopOf="@id/library_sentence_num" />
+        app:layout_constraintStart_toEndOf="@+id/line2"
+        app:layout_constraintTop_toTopOf="@+id/library_sentence_num" />
 
     <TextView
         android:id="@+id/library_curator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:includeFontPadding="false"
         android:text="큐레이터"
         android:textColor="@color/selector_library_tab_click"
-        android:textSize="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@+id/library_sentence"
         app:layout_constraintEnd_toEndOf="@id/library_curator_num"
         app:layout_constraintStart_toStartOf="@id/library_curator_num"
         app:layout_constraintTop_toBottomOf="@id/library_curator_num"
