[Implement Features] - 테마에 문장 쓰기 flow 연결 2. 책 검색 뷰 만들기

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="greyish_brown_two">#535353</color>
     <color name="soft_green">#73c088</color>
     <color name="black">#000000</color>
+    <color name="veryLightPink2">#cbcbcb</color>
     <color name="black_two">#292929</color>
     <color name="brown_grey">#7a7a7a</color>
     <color name="brown_grey_two">#7c7c7c</color>
