--- a/app/src/main/res/layout/activity_setting_version_info.xml
+++ b/app/src/main/res/layout/activity_setting_version_info.xml
@@ -94,13 +94,12 @@
         android:id="@+id/tv_android_os"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="지원 환경 Android OS 5.0 이상"
-        android:textSize="14sp"
+        android:text="지원 환경 Android OS 8.0 이상"
         android:textColor="#a7a7a7"
+        android:textSize="14sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_version_now"
-        />
+        app:layout_constraintTop_toBottomOf="@id/tv_version_now" />
 
 
 
