--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -26,6 +26,9 @@
         android:layout_height="wrap_content"
         android:src="@drawable/btn_back"
         android:layout_marginLeft="1dp"
+        android:paddingEnd="23dp"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
         app:layout_constraintBottom_toBottomOf="@id/tv_setting"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintLeft_toLeftOf="parent"
