--- a/app/src/main/res/layout/dialog_logout.xml
+++ b/app/src/main/res/layout/dialog_logout.xml
@@ -71,9 +71,9 @@
             android:includeFontPadding="false"
             android:letterSpacing="-0.02"
             android:lineSpacingExtra="6sp"
-            android:paddingStart="38dp"
+            android:paddingStart="58dp"
             android:paddingTop="9dp"
-            android:paddingEnd="39dp"
+            android:paddingEnd="57dp"
             android:paddingBottom="8dp"
             android:text="네"
             android:textColor="@color/white"
@@ -87,29 +87,26 @@
         <TextView
             android:id="@+id/tv_logout_no"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginStart="14dp"
-            android:layout_marginTop="22dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="25dp"
             android:background="@drawable/dialog_btn_no"
             android:fontFamily="@font/notosanscjkkr_regular"
             android:gravity="center_horizontal"
             android:includeFontPadding="false"
             android:letterSpacing="-0.02"
             android:lineSpacingExtra="6sp"
-            android:paddingLeft="38dp"
+            android:paddingStart="45dp"
             android:paddingTop="9dp"
-            android:paddingRight="39dp"
+            android:paddingEnd="44dp"
             android:paddingBottom="8dp"
             android:text="아니요"
             android:textColor="@color/soft_green"
             android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_logout_yes"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/tv_logout_yes"
-            app:layout_constraintTop_toBottomOf="@+id/tv_logout" />
+            app:layout_constraintTop_toTopOf="@+id/tv_logout_yes" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
